--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html" charset="UTF-8" />
     <title>3D spinning and illuminating cube</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/Styles/styles.css" />
+    <link rel="stylesheet" href="../src/Styles/styles.css" />
   </head>
   <body>
     <div class="cube">
